<?xml version="1.0"?>
<package format="2">
  <name>hamal_navigation</name>
  <version>0.1.0</version>
  <description>Navigation package for the robot Hamal</description>

  <maintainer email="idil@example.com">idil</maintainer>

  <license>Apache License 2.0</license>

  <build_type>ament_cmake</build_type>

  <depend>nav2_bringup</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_local_costmap</depend>
  <depend>nav2_global_costmap</depend>
  <depend>nav2_dwa_local_planner</depend>
  <depend>nav2_traj_planner</depend>
  <depend>teb_local_planner</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
</package>
